# AutomaticChessClock

./: README.md
hardware/: bom.md
hardware/schematics/: StrawMan_v1.drawio
hardware/schematics/Camera_Mount/: Additional_stand.stl
software/: CMakeLists.txt
software/PI_Env_Setup_Script/: OpenCV_installation.sh
software/detection/: Open_CV_Test.py
software/docs/: ACCHLD.md
software/include/core/: ClockEngine.hpp  MoveFSM.hpp
software/include/types/: ChessEvents.hpp
software/src/core/: ClockEngine.cpp  MoveFSM.cpp
